--- a/myspace-project/src/components/About.css
+++ b/myspace-project/src/components/About.css
@@ -1,10 +1,3 @@
 .about {
-    margin: 20px;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-}
-
-.about h2 {
-    margin-bottom: 10px;
+    display: flex;
 }
