--- a/myspace-project/src/components/Friends.css
+++ b/myspace-project/src/components/Friends.css
@@ -1,10 +1,3 @@
-.friends {
-    margin: 20px;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-}
-
 .friend-list {
     display: flex;
     flex-wrap: wrap;
@@ -12,11 +5,25 @@
 }
 
 .friend {
-    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    margin: 30px;
     text-align: center;
 }
 
 .friend img {
-    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 50px;
+}
+
+@media screen and (max-width: 480px) {
+    .friend-list {
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+    }
 }
