more layout + organization

--- a/myspace-project/src/components/About.css
+++ b/myspace-project/src/components/About.css
@@ -1,3 +1,28 @@
 .about {
     display: flex;
 }
+
+.about-status {
+    margin-top: 20px;
+    font-weight: 700;
+}
+
+.about-info {
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.about-login {
+    margin-bottom: auto;
+}
+
+.profile-image img {
+    max-width: 200px;
+    width: 100%;
+    height: auto;
+}
+
+.view-links {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
