--- a/myspace-project/src/App.css
+++ b/myspace-project/src/App.css
@@ -14,32 +14,10 @@ textarea {
   font-weight: normal;
 }
 
-.myspace-page {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
+body {
+  margin: 0;
+  padding: 0;
 }
-
-.logo {
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.search-bar {
-  display: flex;
-  margin-bottom: 10px;
-}
-
-.search-bar select,
-.search-bar input,
-.search-bar button {
-  margin-right: 5px;
-}
-
-.user-actions {
-  white-space: nowrap;
-}
-
 
 .profile-layout {
   display: flex;
@@ -52,99 +30,28 @@ textarea {
   width: 100%;
 }
 
-.profile-image img {
-  max-width: 200px;
-  width: 100%;
-  height: auto;
-}
-
-.user-info {
-  font-size: 0.9em;
+.myspace-page {
+  width: 45%;
+  margin: 0 auto;
 }
 
 .myspace-url {
-  border: 1px solid #CCCCCC;
-  padding: 10px;
+  font-size: 8pt;
+  border: 1px solid #000000;
   margin-top: 10px;
-}
-
-.contact-box {
-  border: 1px solid #CCCCCC;
-  padding: 10px;
-  margin-top: 10px;
-  background-color: #F1F1F1;
-}
-
-.contact-box h3 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  font-size: 0.9em;
-  color: #333;
-  border-bottom: 1px solid #CCCCCC;
-  padding-bottom: 5px;
-}
-
-.contact-buttons {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 5px;
-}
-
-.contact-box button {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  padding: 5px;
-  background-color: #FFFFFF;
-  border: 1px solid #CCCCCC;
-  cursor: pointer;
-  font-size: 0.8em;
-  text-align: left;
-  transition: background-color 0.3s;
-}
-
-.contact-box button:hover {
-  background-color: #E6E6E6;
-}
-
-.contact-box button img {
-  width: 16px;
-  height: 16px;
-  margin-right: 5px;
-}
-
-@media screen and (max-width: 480px) {
-  .contact-buttons {
-    grid-template-columns: 1fr;
-  }
-
-  .network-status {
-    width: 40%;
-  }
-
-  .blog-entries {
-    width: 40%;
-  }
-
-  .blurbs {
-    width: 40%;
-  }
-
+  padding: 0px 0px 13px 3px;
+  line-height: 0px;
 }
 
 .network-status {
-  border: 1px solid #CCCCCC;
-  padding: 10px;
+  padding: 30px;
   margin-bottom: 10px;
-}
-
-.blog-entries {
-  margin-bottom: 20px;
-}
-
-.blurbs {
-  background-color: #FFCC99;
-  padding: 10px;
+  font-size: 12pt;
+  color: #000000;
+  font-weight: bold;
+  text-align: center;
+  line-height: 20px;
+  border: 2px solid #000000;
 }
 
 h1,
@@ -152,8 +59,30 @@ h3 {
   margin-top: 0;
 }
 
-/* Responsive breakpoints */
+@media screen and (max-width: 480px) {
+  body {
+    margin: 10px;
+  }
+
+  .myspace-page {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .left-column {
+    padding-right: 20px;
+  }
+
+  .right-column {
+    flex-grow: 1;
+  }
+}
+
 @media screen and (min-width: 768px) {
+  body {
+    margin: 10px;
+  }
+
   .profile-layout {
     flex-wrap: nowrap;
   }
@@ -165,36 +94,5 @@ h3 {
 
   .right-column {
     flex-grow: 1;
-  }
-
-  header {
-    flex-wrap: nowrap;
-  }
-
-  .logo,
-  .search-bar {
-    margin-bottom: 0;
-  }
-
-  .network-status {
-    width: 100%;
-  }
-
-  .blog-entries {
-    width: 100%;
-  }
-
-  .blurbs {
-    width: 100%;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  body {
-    font-size: 18px;
-  }
-
-  .myspace-page {
-    padding: 0 30px;
   }
 }
