--- a/myspace-project/src/components/About.css
+++ b/myspace-project/src/components/About.css
@@ -5,24 +5,32 @@
 .about-status {
     margin-top: 20px;
     font-weight: 700;
+    font-size: 0.9em;
 }
 
 .about-info {
     margin-top: 20px;
     margin-bottom: 40px;
+    font-size: 0.9em;
 }
 
 .about-login {
     margin-bottom: auto;
+    font-size: 0.9em;
 }
 
-.profile-image img {
+.about-profile-image img {
     max-width: 200px;
     width: 100%;
     height: auto;
 }
 
-.view-links {
+.about-view-links {
     margin-top: 5px;
     margin-bottom: 5px;
+    font-size: 0.8em;
+}
+
+.about-view-links a {
+    color: var(--font-pink);
 }
