--- a/myspace-project/src/components/Background.css
+++ b/myspace-project/src/components/Background.css
@@ -1,8 +1,10 @@
 .background {
-    width: '100vw';
-    height: '100vh';
     position: fixed;
     top: 0;
     left: 0;
     overflow: auto;
+}
+
+.header-background {
+    position: relative;
 }
