--- a/myspace-project/src/components/Contact.css
+++ b/myspace-project/src/components/Contact.css
@@ -9,7 +9,6 @@
     margin-top: 0;
     margin-bottom: 10px;
     font-size: 1em;
-    color: #333;
     border-bottom: 1px solid var(--border-pink);
     padding-bottom: 5px;
 }
@@ -25,10 +24,10 @@
     align-items: center;
     width: 100%;
     padding: 5px;
-    background-color: #fffafd;
+    background-color: var(--background-light-pink);
     border: 1px dotted var(--border-pink);
     cursor: pointer;
-    font-size: 0.9em;
+    font-size: 0.8em;
     text-align: left;
     transition: background-color 0.3s;
 }
