fix responsive bg bug

--- a/myspace-project/src/components/Background.css
+++ b/myspace-project/src/components/Background.css
@@ -1,10 +1,13 @@
 .background {
-    position: fixed;
+    width: '100vw';
+    height: '100vh';
+    position: absolute;
     top: 0;
     left: 0;
     overflow: auto;
 }
 
 .header-background {
+    /* width: '90%'; */
     position: relative;
 }
