--- a/myspace-project/src/components/Header.css
+++ b/myspace-project/src/components/Header.css
@@ -60,6 +60,8 @@
     overflow-x: auto;
     white-space: nowrap;
     text-align: center;
+    max-width: 100%;
+    width: 100%;
 }
 
 .header-nav a {
