--- a/myspace-project/src/components/Blurbs.css
+++ b/myspace-project/src/components/Blurbs.css
@@ -15,7 +15,7 @@
 }
 
 .blurbs h4 {
-    font-size: 13pt;
+    font-size: 14pt;
     margin-top: 0px;
     margin-bottom: 10px;
 }
@@ -28,4 +28,27 @@
 
 .blurbs-image {
     margin: 5px;
+}
+
+.blurbs-image-embed {
+    width: 50%;
+}
+
+.blurbs-text {
+    margin: 10px;
+    justify-content: center;
+    list-style-position: inside;
+}
+
+.blurbs-text ol {
+    margin-left: -40px;
+}
+
+.blurbs-text ol li::marker {
+    color: var(--font-pink);
+}
+
+.blurbs-text a {
+    line-height: 1em;
+    color: var(--font-pink)
 }
