--- a/myspace-project/src/components/Blurbs.css
+++ b/myspace-project/src/components/Blurbs.css
@@ -36,6 +36,7 @@
 
 .blurbs-text {
     margin: 10px;
+    margin-bottom: 20px;
     justify-content: center;
     list-style-position: inside;
     line-height: 1.2em;
@@ -52,4 +53,25 @@
 .blurbs-text a {
     line-height: 1em;
     color: var(--font-pink)
+}
+
+.blurbs-link {
+    font-size: 14pt;
+    margin-bottom: 15px;
+    color: var(--font-purple);
+    font-family: "Rainy Hearts", "Pixelify Sans", verdana, arial, sans-serif, helvetica;
+}
+
+.blurbs-link a {
+    line-height: 2em;
+    font-size: 14pt;
+    color: rgb(0, 187, 255);
+    margin: 5px;
+    font-family: "Rainy Hearts", "Pixelify Sans", verdana, arial, sans-serif, helvetica;
+}
+
+.blurbs-link img {
+    margin: 2px;
+    margin-bottom: -3px;
+    width: 15px;
 }
