--- a/myspace-project/src/App.css
+++ b/myspace-project/src/App.css
@@ -41,7 +41,7 @@ div,
 textarea,
 button {
   font-family: "Pixelify Sans", verdana, arial, sans-serif, helvetica;
-  font-size: 10pt;
+  font-size: 0.9rem;
   color: var(--font-purple);
   font-weight: normal;
 }
@@ -84,7 +84,7 @@ a:hover {
 }
 
 .myspace-url {
-  font-size: 9pt;
+  font-size: 0.8rem;
   border: 2px dotted var(--border-pink);
   background-color: var(--background-pink);
   margin-top: 10px;
@@ -108,18 +108,18 @@ a:hover {
   border-radius: 3px;
   z-index: 1;
   width: auto;
-  font-size: 9pt;
+  font-size: 0.8rem;
   color: var(--font-purple);
 }
 
 .myspace-url h4 {
-  font-size: 12pt;
+  font-size: 1.1rem;
 }
 
 .network-status {
   padding: 20px;
   margin-bottom: 10px;
-  font-size: 11pt;
+  font-size: 0.9rem;
   color: var(--font-purple);
   font-weight: bold;
   text-align: center;
@@ -169,7 +169,7 @@ h3 {
   }
 
   .left-column {
-    width: 400px;
+    width: 450px;
     padding-right: 20px;
   }
 
