--- a/myspace-project/src/components/Background.css
+++ b/myspace-project/src/components/Background.css
@@ -1,6 +1,6 @@
 .background {
-    width: '100vw';
-    height: '100vh';
+    width: "100vw";
+    height: "100vh";
     position: absolute;
     top: 0;
     left: 0;
